--- a/templates/accounts/add_customer.html
+++ b/templates/accounts/add_customer.html
@@ -277,8 +277,7 @@
                         <div class="card-body">
                             <div class="mb-3">
                                 <label for="shop_images" class="form-label">Upload Shop Images</label>
-                                <input class="form-control" type="file" name="shop_images" id="shop_images" multiple accept="image/*"
-                                    {% if not edit_customer %}required{% endif %}>
+                                <input class="form-control" type="file" name="shop_images" id="shop_images" multiple accept="image/*">
                             </div>
                             <div class="row" id="shopImagesPreview"></div>
 
