--- a/templates/accounts/add_customer.html
+++ b/templates/accounts/add_customer.html
@@ -245,7 +245,7 @@
                                 <div class="col-md-4">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Enter a valid Email Address" value="{{ edit_customer.email|default:'' }}" required>
+                                        placeholder="Enter a valid Email Address" value="{{ edit_customer.email|default:'' }}">
                                 </div>
 
                                 <div class="col-md-4">
