--- a/templates/accounts/add_customer.html
+++ b/templates/accounts/add_customer.html
@@ -154,34 +154,35 @@
 
                                 <!-- Non-GST Fields -->
                                 <div id="nonGstFields" class="row g-3">
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <label for="shop_name" class="form-label">Shop Name</label>
                                         <input type="text" class="form-control" name="shop_name" id="shop_name"
                                             placeholder="Enter Shop Name" value="{{ edit_customer.shop_name|default:'' }}">
                                     </div>
-                                    <div class="col-md-8">
+                                    <div class="col-md-6">
                                         <label for="shop_address" class="form-label">Shop Address</label>
                                         <textarea class="form-control" name="shop_address" id="shop_address" rows="1"
                                                 placeholder="Enter Shop Address">{{ edit_customer.shop_address|default:'' }}</textarea>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <label for="shop_city" class="form-label">Shop City</label>
                                         <input type="text" class="form-control" name="shop_city" id="shop_city"
                                             placeholder="Enter Shop City" value="{{ edit_customer.shop_city|default:'' }}">
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <label for="shop_district" class="form-label">Shop District</label>
                                         <input type="text" class="form-control" name="shop_district" id="shop_district"
                                             placeholder="Enter Shop District" value="{{ edit_customer.shop_district|default:'' }}">
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <label for="shop_state" class="form-label">Shop State</label>
                                         <input type="text" class="form-control" name="shop_state" id="shop_state"
                                             placeholder="Enter Shop State" value="{{ edit_customer.shop_state|default:'' }}">
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-6">
                                         <label for="shop_pincode" class="form-label">Shop Pincode</label>
-                                        <input type="text" class="form-control" name="shop_pincode" id="shop_pincode"
+                                        <input type="text" class="form-control" name="shop_pincode" id="shop_pincode"  pattern="[0-9]*" inputmode="numeric"
+                                            oninput="this.value = this.value.replace(/[^0-9]/g, '')"
                                             placeholder="Enter Shop Pincode" value="{{ edit_customer.shop_pincode|default:'' }}">
                                     </div>
                                 </div>
@@ -189,13 +190,13 @@
                                 <!-- Footfall -->
                                 <div class="col-md-4">
                                     <label for="foot_fall_weekdays" class="form-label">Foot Fall in Weekdays</label>
-                                    <input type="number" class="form-control" name="foot_fall_weekdays" id="foot_fall_weekdays"
+                                    <input type="number" class="form-control" name="foot_fall_weekdays" id="foot_fall_weekdays" min="0"
                                         placeholder="Enter Foot Fall in Weekdays" value="{{ edit_customer.weekday_footfall|default:'' }}">
                                 </div>
 
                                 <div class="col-md-4">
                                     <label for="foot_fall_weekends" class="form-label">Foot Fall in Weekends</label>
-                                    <input type="number" class="form-control" name="foot_fall_weekends" id="foot_fall_weekends"
+                                    <input type="number" class="form-control" name="foot_fall_weekends" id="foot_fall_weekends" min="0"
                                         placeholder="Enter Foot Fall in Weekends" value="{{ edit_customer.weekend_footfall|default:'' }}">
                                 </div>
 
@@ -216,7 +217,7 @@
                         </div>
                         <div class="card-body">
                             <div class="row g-3">
-                                {% if current_user.role.name == "Admin" %}
+                                {% if not current_user.role.name == "Salesman" %}
                                 <div class="col-md-4">
                                     <label for="user" class="form-label">Assigned Salesman</label>
                                     <select class="form-select" name="user" id="user" required>
@@ -233,13 +234,13 @@
                                 <div class="col-md-4">
                                     <label for="full_name" class="form-label">Store Incharge/Manager Name</label>
                                     <input type="text" class="form-control" name="full_name" id="full_name"
-                                        placeholder="Enter Full Name" value="{{ edit_customer.full_name|default:'' }}" required>
+                                        placeholder="Enter Full Name" value="{{ edit_customer.full_name|default:'' }}" >
                                 </div>
 
                                 <div class="col-md-4">
                                     <label for="phone_number" class="form-label">Phone Number</label>
                                     <input type="tel" class="form-control" name="phone_number" id="phone_number"
-                                        placeholder="Enter phone No" value="{{ edit_customer.phone_number|default:'' }}" required>
+                                        placeholder="Enter phone No" value="{{ edit_customer.phone_number|default:'' }}" >
                                 </div>
 
                                 <div class="col-md-4">
