--- a/templates/company_admin/base.html
+++ b/templates/company_admin/base.html
@@ -377,7 +377,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'category_table' %}">Categories</a></li>
                     {% endif %}
                     {% if role_permission.all_products_v %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'product_table' %}">All Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'product_table' %}">Products</a></li>
                     {% endif %}
                     {% if role_permission.daily_production_v %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'daily_production_table' %}">Daily Production</a></li>
