--- a/templates/company_admin/dashboard.html
+++ b/templates/company_admin/dashboard.html
@@ -332,7 +332,7 @@
                                     <div class="list-group-item d-flex justify-content-between align-items-center">
                                         <div>
                                             <span class="badge bg-dark rounded-pill me-2">#{{ forloop.counter }}</span>
-                                            <strong>{{ c.name }}--({{c.shop_name}}-{{c.shop_city}})</strong>
+                                            <strong>({{c.shop_name}}-{{c.shop_city}})</strong>
                                         </div>
                                         <div class="text-end">
                                             <div>₹ {{ c.revenue }}</div>
